@@ -1,3 +1,8 @@
+[B]v1.8[/B]
+- DazSports changed the streams
+- Temporary disabled JanLul. Reason: Changed his site
+- Added poleposition
+
 [B]v1.7[/B]
 - Automaticly scrap streamsites
 
